deploy/kind/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hanko-public
  namespace: hanko
spec:
  selector:
    app: hanko
  ports:
    - port: 80
      targetPort: http-public
      protocol: TCP
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: hanko-admin
  namespace: hanko
spec:
  selector:
    app: hanko
  ports:
    - port: 80
      targetPort: http-admin
      protocol: TCP
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: hanko-management
  namespace: hanko
spec:
  selector:
    app: hanko
  ports:
    - port: 80
      targetPort: http-management
      protocol: TCP
      name: http
